--- a/index.html
+++ b/index.html
@@ -5,10 +5,36 @@
   <title>Flores y corazones</title>
   <link rel="stylesheet" href="./style.css">
 
+  <style>
+    .container {
+        position: relative;
+        text-align: center;
+    }
+
+    .greetings {
+        position: absolute;
+        top: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        text-align: center;
+        z-index: 9999; /* Asegura que el texto esté por encima de las flores */
+        width: 100%;
+    }
+
+    .greetings h1 {
+        font-size: 24px;
+        color: #ffffff;
+        padding: 10px 20px;
+        border-radius: 10px;
+    }
+</style>
+
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<body class="container">
+<body class="container"><div class="greetings">
+  <h1>Perdon por hacerte enojar 😔🧚❤️!!</h1>
+</div>
   <div class="night"></div>
   <div class="flowers">
     <div class="flower flower--1">
